---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/opaque_type_destructure"
---
error: Unknown module value
   ┌─ src/two.gleam:10:7
   │
10 │   let one.User(name: name, score: score) = user
   │       ^

The module `one` does not have a `User` value.
